# Etermal

./: .gitignore  CMakeLists.txt  CONTRIBUTING  LICENSE  Makefile  README.md  conf.sh  depconfig.mk  objects.mk  shaders.sh
dev/: emshaders  shaders
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  build.sh  building.dox  escape_sequences.dox  escapes.dox  gettingstarted.dox  input.dox  mainpage.dox
examples/: CMakeLists.txt  basic.cpp
include/: base.h  basicshell.h  bmpfont.h  etermal.h  font.h  shell.h  terminal.h
resources/shaders/: primitive.frag  primitive.h  primitive.vert  text.frag  text.h  text.vert  texture.frag  texture.h
src/: EShell.h  ETerminal.h  TermInput.h  main.cpp
src/shell/: ArgFilter.cpp  ArgFilter.h  Args.cpp  Args.h  BasicShell.cpp  BasicShell.h  Command.cpp  Command.h  EShell.cpp  ETerminal.cpp  ETerminal.h  Shell.cpp  Shell.h  TermInput.h  error.cpp  error.h  shellError.cpp  shellError.h
src/shell/data/: ArgData.cpp  ArgData.h  data.cpp  data.h
src/terminal/: Character.cpp  Character.h  Glyph.cpp  Glyph.h  Line.cpp  Line.h  Resources.cpp  Resources.h  Scroll.cpp  Scroll.h  State.cpp  State.h  TermInput.cpp  Terminal.cpp  Terminal.h  TextBuffer.cpp  TextBuffer.h  codec.cpp  codec.h  encode.cpp  encode.h  env.cpp  env.h
src/terminal/gui/: Button.cpp  Button.h  Image.cpp  Image.h  Rectangle.cpp  Rectangle.h  ScrollBox.cpp  ScrollBox.h  Scrollbar.cpp  Scrollbar.h  Text.cpp  Text.h  TextInput.cpp  TextInput.h  Triangle.cpp  Triangle.h
src/terminal/render/: BmpFont.cpp  BmpFont.h  Buffer.cpp  Buffer.h  Color.cpp  Color.h  EtmFont.cpp  EtmFont.h  Font.cpp  Font.h  FontLibrary.cpp  FontLibrary.h  Framebuffer.cpp  Framebuffer.h  Model.cpp  Model.h  RModel.cpp  RModel.h  Texture.cpp  Texture.h  Translate.cpp  Translate.h  ftype.h  glfw.h  opengl.h
src/terminal/shader/: Primitive.cpp  Primitive.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  texture.cpp  texture.h
src/terminal/textmods/: Lookbehind.cpp  Lookbehind.h  Mod.cpp  Mod.h  RenderState.cpp  RenderState.h  TextState.cpp  TextState.h  mods.cpp  mods.h
src/terminal/util/: IdList.cpp  IdList.h  Timer.cpp  Timer.h  debug.cpp  debug.h  enums.h  error.cpp  error.h  singleton.cpp  singleton.h  termError.cpp  termError.h  util.cpp  util.h
tests/: CMakeLists.txt  main.cpp
